Small style updates and add empty vue.config

--- a/src/scss/global-styles.scss
+++ b/src/scss/global-styles.scss
@@ -10,6 +10,12 @@
   transition: color 0.1s linear;
   transition: background-color 0.1s linear;
 }
+html, body {
+  position: relative;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
 
 // PAGE TRANSITIONS
 .fade-enter-active,
@@ -34,5 +40,6 @@ a {
   }
 }
 ul {
+  padding-inline-start: 0;
   list-style-type: none;
 }
