--- a/src/scss/global-styles.scss
+++ b/src/scss/global-styles.scss
@@ -38,6 +38,9 @@ a {
   &:hover {
     color: var(--color-secondary-text-subtle);
   }
+  &.router-link-exact-active {
+    text-decoration: none;
+  }
 }
 ul {
   padding-inline-start: 0;
